# mcp-server

./: .gitignore  New Text Document.txt  README.md
mcp-qa-report/: README.md  VERIFICATION.md  env.example  main.py  package-lock.json  pyproject.toml
mcp-qa-report/src/application/: container.py  execution_context.py  policies.py  qa_runner.py
mcp-qa-report/src/domain/: models.py  ports.py
mcp-qa-report/src/infrastructure/: detect_mcp.py  errors.py  jsonrpc_client.py  logging_config.py  process_runner.py  runner_factory.py
mcp-qa-report/src/infrastructure/checks/: invocation_checks.py  process_checks.py  stdio_checks.py  tool_checks.py  tool_quality_checks.py
mcp-qa-report/src/infrastructure/reporters/: report_writer.py  text_reporter.py
mcp-qa-report/src/mcp_server/: server.py  tools.py
mcp-qa-report/tests/: conftest.py
mcp-qa-report/tests/e2e/: test_ping_e2e.py
mcp-qa-report/tests/integration/: test_server_smoke.py
mcp-qa-report/tests/unit/: test_startup_check.py
mcp-qa-report/tests/unit/application/: test_qa_runner.py
mcp-qa-report/tests/unit/domain/: test_models.py
mcp-qa-report/tests/unit/infrastructure/: test_detect_mcp.py  test_jsonrpc_client.py  test_process_runner.py  test_startup_check.py  test_stdio_check.py  test_tool_description_quality_check.py  test_tool_invocation_check.py  test_tools_registration_check.py
mcp-qa-report/tests/unit/infrastructure/checks/: test_startup_check.py  test_stdio_check.py  test_tool_description_quality_check.py  (+2 more)
mcp-qa-report/tests/unit/mcp_server/: test_tools_output_path.py
(+4 files in other folders)
