[project]
name = "qa-report-mcp"
version = "0.1.0"
description = "MCP server providing QA and sanity checks for AI coding projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[project.scripts]
qa-report-mcp = "mcp_server.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv]
package = true
